# critica

./: .gitignore  Makefile  README.md  README_PYTHON.md  go.mod  go.sum  main.go  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  release.yml
cmd/: ai.go  root.go
critica_py/: __init__.py  cli.py
critica_py/ai/: __init__.py  service.py
critica_py/config/: __init__.py  config.py
critica_py/git/: __init__.py  branch.py  commit.py  diff.py
internal/ai/: service.go
internal/ai/agent/: agent.go
internal/ai/llm/: provider.go
internal/ai/llm/prompt/: templates.go
internal/ai/llm/provider/: anthropic.go  local.go  openai.go
internal/ai/permission/: permission.go
internal/ai/session/: session.go
internal/ai/tools/: analyze.go  edit.go  explain.go  report.go  report_test.go  suggest.go  types.go
internal/config/: config.go
internal/git/: branch.go  commit.go  diff.go
internal/parser/: parser.go
internal/ui/: ai-chat.go  interactive.go  renderer.go  theme.go
internal/ui/layout/: container.go  types.go
scripts/ci/: post_report.ts
