[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "critica"
version = "2.0.0"
description = "AI-powered Git analysis CLI tool"
readme = "README_PYTHON.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Critica Contributors"}
]
dependencies = [
    "openai>=1.54.0",
    "click>=8.1.0",
    "gitpython>=3.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
critica = "critica_py.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["critica_py*"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
